# CMPT-479-Project

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Patch_Candidates.txt  README.md  SuspiciousNodes.txt  fixIngredients.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
SBFL/: data.json
apr-project-results/: pipeline_results.json
buggy-programs/: README.md  build-all.sh
buggy-programs/01-buggy-calculator/src/: calculator.cpp
buggy-programs/01-buggy-linked-list/: get_coverage.sh
buggy-programs/01-buggy-linked-list/src/: linked_list.cpp
buggy-programs/01-buggy-sort/: get_coverage.sh
buggy-programs/01-buggy-sort/src/: sort.cpp
buggy-programs/01-buggy-stack-queue/: get_coverage.sh
buggy-programs/01-buggy-stack-queue/include/: stack-queue.h
buggy-programs/01-buggy-stack-queue/src/: stack-queue.cpp
buggy-programs/01-buggy-visitor-pattern/: get_coverage.sh
buggy-programs/01-buggy-visitor-pattern/src/: area_calculator.cpp  rectangle.cpp
buggy-programs/01-buggy-visitor-pattern/tests/: test_area_calculator.cpp
buggy-programs/02-buggy-calculator/src/: calculator.cpp
buggy-programs/02-buggy-linked-list/include/: linked_list.h
buggy-programs/02-buggy-linked-list/src/: linked_list.cpp
buggy-programs/02-buggy-sort/: CMakeLists.txt  get_coverage.sh
buggy-programs/02-buggy-sort/include/: sort.h
buggy-programs/02-buggy-sort/src/: sort.cpp
buggy-programs/02-buggy-sort/tests/: test_sort.cpp
buggy-programs/02-buggy-stack-queue/src/: stack-queue.cpp
buggy-programs/02-buggy-visitor-pattern/include/: circle.h  triangle.h  visitor.h
buggy-programs/02-buggy-visitor-pattern/src/: area_calculator.cpp  circle.cpp
buggy-programs/03-buggy-calculator/src/: calculator.cpp
buggy-programs/03-buggy-linked-list/: CMakeLists.txt  get_coverage.sh  main.cpp
buggy-programs/03-buggy-linked-list/src/: linked_list.cpp
buggy-programs/03-buggy-sort/: get_coverage.sh
buggy-programs/03-buggy-sort/src/: sort.cpp
buggy-programs/03-buggy-stack-queue/: get_coverage.sh
buggy-programs/03-buggy-stack-queue/src/: stack-queue.cpp
buggy-programs/03-buggy-stack-queue/tests/: test_stack_queue.cpp
buggy-programs/03-buggy-visitor-pattern/: CMakeLists.txt
buggy-programs/03-buggy-visitor-pattern/include/: area_calculator.h
buggy-programs/03-buggy-visitor-pattern/src/: area_calculator.cpp
buggy-programs/04-buggy-calculator/: get_coverage.sh
buggy-programs/04-buggy-calculator/src/: calculator.cpp
buggy-programs/04-buggy-linked-list/: get_coverage.sh
buggy-programs/04-buggy-linked-list/src/: linked_list.cpp
buggy-programs/04-buggy-sort/src/: main.cpp  sort.cpp
buggy-programs/04-buggy-stack-queue/src/: stack-queue.cpp
buggy-programs/04-buggy-visitor-pattern/: main.cpp
buggy-programs/04-buggy-visitor-pattern/src/: area_calculator.cpp
buggy-programs/05-buggy-calculator/: CMakeLists.txt
buggy-programs/05-buggy-calculator/src/: calculator.cpp
buggy-programs/05-buggy-linked-list/src/: linked_list.cpp
buggy-programs/05-buggy-linked-list/tests/: test_linked_list.cpp
buggy-programs/05-buggy-sort/src/: sort.cpp
buggy-programs/05-buggy-stack-queue/: CMakeLists.txt
buggy-programs/05-buggy-stack-queue/src/: stack-queue.cpp
buggy-programs/05-buggy-visitor-pattern/: CMakeLists.txt  get_coverage.sh
buggy-programs/05-buggy-visitor-pattern/include/: rectangle.h
buggy-programs/05-buggy-visitor-pattern/src/: area_calculator.cpp  triangle.cpp
docs/guides/: docker-quick-start.md
results-testing-mock/: pipeline_results.json
src/: CMakeLists.txt  calculator.cpp  hello_world.cpp  main.cpp
src/cli/: cli.cpp  cli.h
src/core/: contracts.h  logger.cpp  logger.h  types.h
src/mutator/: context.cpp  context.h  freq_loader.cpp  freq_loader.h  mutator.cpp  mutator.h  utils.cpp  utils.h
src/orchestrator/: orchestrator.cpp  orchestrator.h
src/parser/: parser.cpp  parser.h
src/prbot/: prbot.cpp  prbot.h
src/prioritizer/: prioritizer.cpp  prioritizer.h  utils.cpp  utils.h
src/sbfl/: sbfl.cpp  sbfl.h  sbfl_analysis.py  utils.cpp  utils.h
src/sbfl/SBFL/: sbfl_analysis.py
src/testing_mock/: CMakeLists.txt  data.json
src/testing_mock/include/: add.h  calculator.h
src/testing_mock/src/: add.cpp  calculator.cpp  main.cpp
src/testing_mock/tests/: CMakeLists.txt  test_add.cpp  test_add_negative.cpp  test_add_zero.cpp  test_area_rectangle.cpp  test_area_rectangle_negative.cpp  test_area_rectangle_zero.cpp  test_divide.cpp  test_divide_by_zero.cpp  test_divide_negative.cpp  test_divide_zero.cpp  test_mixed.cpp  test_multiply.cpp  test_multiply_negative.cpp  test_multiply_zero.cpp  test_positive.cpp  test_sqrt_first.cpp  test_sqrt_first_negative.cpp  test_sqrt_second.cpp  test_subtract.cpp  test_subtract_negative.cpp  test_with_zero.cpp
src/validator/: notes.md  validator.cpp  validator.h
test-data/: coverage.xml  freq.json  note.md  test_results.json
tests/: CMakeLists.txt
tests/test_mixed/: test_mixed.cpp
tests/test_negative/: test_negative.cpp
tests/test_negative/coverage/: add.cpp.gcov
tests/test_zero/: test_zero.cpp
tests/unit/: test_mutator.cpp  test_orchestrator.cpp  test_parser.cpp  test_prbot.cpp  test_prioritizer.cpp  test_sbfl.cpp  test_validator.cpp
tools/github-app/: .eslintrc.js  .gitignore  Aptfile  README.md  env.example  jest.integration.config.js  note.md  package-lock.json  package.json  setup-apr-binary.sh  tsconfig.json
tools/github-app/src/: mvp-apr-service.ts  server.ts  types.ts
tools/github-app/src/handlers/: workflow-run.ts
tools/github-app/src/services/: apr-binary-service.ts  apr-orchestrator.ts  apr-results-parser.ts  auth-service.ts  index.ts  pull-request-service.ts  repository-service.ts
tools/github-app/src/types/: apr.ts  events.ts
tools/github-app/src/utils/: cleanup-manager.ts  config.ts  error-handler.ts  exec-utils.ts  index.ts
